sections/section-050/module-01/playground/manifests/deny-all.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: deny-all
  namespace: accesslog-demo
spec:
  selector:
    matchLabels:
      app: notification-service
  action: DENY
  rules:
    - {}
